@@ -1,34 +1,22 @@
 package com.devsuperior.dslist.servicies;
 
-import com.devsuperior.dslist.dto.GameDTO;
 import com.devsuperior.dslist.dto.GameListDTO;
-import com.devsuperior.dslist.dto.GameMinDTO;
-import com.devsuperior.dslist.entities.Game;
 import com.devsuperior.dslist.entities.GameList;
 import com.devsuperior.dslist.repositories.GameListRepository;
-import com.devsuperior.dslist.repositories.GameRepository;
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
-import org.springframework.transaction.annotation.Transactional;
-import org.springframework.web.bind.annotation.PathVariable;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 public class GameListService {
 
+    @Autowired
+    private GameListRepository gameListRepository;
 
-    private final GameListRepository gameListRepository;
-
-    public GameListService(GameListRepository gameListRepository) {
-        this.gameListRepository = gameListRepository;
-    }
-
-
-    @Transactional(readOnly = true)
     public List<GameListDTO> findAll() {
-        List<GameList> result = gameListRepository.findAll();
-        return result.stream().map(GameListDTO::new).toList();
+        List<GameList> lists = gameListRepository.findAll();
+        return lists.stream().map(GameListDTO::new).collect(Collectors.toList());
     }
-
-
 }
